# multi-agent-equity-research-desk

./: README.md  pyproject.toml
config/: budgets.yaml  models.yaml  pricing.yaml  universe.yaml
docs/: screener-eval.md
memos/examples/: baseline-DOV.json  baseline-DOV.md  example-cost-report.md  pipeline-CMI.json  pipeline-CMI.md  pipeline-PH.json  pipeline-PH.md  pipeline-RTX.json  pipeline-RTX.md
src/desk/: cli.py  settings.py
src/desk/agents/: base.py  baseline.py  critic.py  reader.py  screener.py  synthesizer.py
src/desk/contracts/: registry.py  v1.py
src/desk/data/: cache.py  edgar.py  filings.py  metrics.py  metrics_source.py  sections.py  ticker_map.py  universe.py  yf.py
src/desk/evals/: compare.py  failure_injection.py  judge.py  planted_errors.py
src/desk/evals/data/: screener_suite.yaml
src/desk/evals/screener/: fixtures.py  (+6 more)
src/desk/ledger/: db.py  report.py
src/desk/orchestrator/: multi_agent.py  pipeline.py  policies.py  render.py  run.py
src/desk/tools/: filing_tools.py  screen_tools.py  util.py
tests/: conftest.py  test_baseline_fake.py  test_budget.py  test_cache.py  test_contracts.py  test_edgar.py  test_evals.py  test_ledger.py  test_live.py  test_metrics.py  test_pipeline.py  test_screener_cli.py  test_screener_eval.py  test_screener_harness.py  test_sections.py  test_skeleton.py  test_tools.py  test_universe.py  test_validation.py
tests/fixtures/: company_tickers.json  companyfacts_CIK0000320193.json  submissions_CIK0000320193.json  synthetic_10k.html
tests/fixtures/screener/: screen_result_v1.json  universe_fixture.yaml
(+7 files in other folders)
