[project]
name = "research-desk"
version = "0.1.0"
description = "Multi-agent stock research desk — an engineering demonstration of Claude Agent SDK orchestration"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Brian Donelan", email = "briandonelan@gmail.com" }]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-ulid>=2.2",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.7",
]

[project.scripts]
desk = "desk.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desk"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that hit real network/LLM APIs (skipped in CI)",
]
addopts = "-q"

[tool.uv]
package = true
